--- a/styles/custom.css
+++ b/styles/custom.css
@@ -4,7 +4,8 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-family: 'Oswald', sans-serif;
+    /* font-family: 'Oswald', sans-serif; */
+    font-family: 'Open Sans', sans-serif;
 }
 nav {
     display: -webkit-flex; /* Safari & iOS support */
@@ -12,23 +13,38 @@ nav {
     height: 100px;
     width: 100%;
     position: fixed;
-    background-color: grey;
-
+    background-color: rgba(255, 255, 255, 0);
 }
 .container {
     display: flex;
-    width: 75%;
+    width: 100%;
+    padding: 0 20px;
     margin: auto;
     height: 100%;
     align-items: center;
+    color: white;
+}
+@media only screen and (min-width: 1024px) {
+    .container {
+        width: 75%;
+    }
+}
+#brand{
+    display: -webkit-box;
+    display: flex;
+}
+#tagline {
+    flex-direction: column;
+    padding-left: 10px;
+    font-size: 14px;
 }
 #logo {
     font-family: 'Righteous', cursive;
-    color: black;
-    font-size: 40px;
-    border: 5px solid black;
+    font-size: 30px;
+    border: 5px solid #fff;
     border-radius: 50%;
     padding: 2px;
+    color: #fff;
 }
 nav a {
     text-decoration: none;
@@ -37,33 +53,41 @@ nav a {
     margin-left: auto;
     margin-right: 0px;
     display: none;
+    color: #fff;
 }
 #dropdownBtn {
     border: none;
-    background-color: grey;
+    background-color: rgba(255, 255, 255, 0);
+    color: #fff;
+}
+#dropdownBtn:focus {
+    outline: 0;
 }
 .dropdown {
     margin-left: auto;
-    margin-right: 0px;
+    margin-right: 0px;    
 }
 .dropdownContent {
     display: none;
     position: absolute;
-    background-color: grey;
+    background-color: rgba(255, 255, 255, 0);
     right: 10px;
     text-align: center;
+    border: 1px solid #fff;
+    margin-top: 5px;
 }
 .navLink {
-    color: black;
+    color: #fff;
     padding: 25px;
     text-transform: uppercase;
     display: none;
 }
 .dropdownContent a {
-    color: black;
-    padding: 25px;
+    color: #fff;
+    padding: 10px;
     text-transform: uppercase;
     display: block;
+    font-size: 11px;
 }
 .show {
     display: block;
@@ -79,15 +103,30 @@ nav a {
         display: none;
     }
 }
-/*
-#burgerContainer {
+.jumbo {
+    background-color: #8a0000;
+    background: linear-gradient(to bottom right, #8a0000, #45008a);
+    background: -webklit-linear-gradient(top left, #8a0000, #45008a);
+    background: -o-linear-gradient(bottom right, #8a0000, #45008a);
+    background: -moz-linear-gradient(bottom right, #8a0000, #45008a);
+    height: 300px;
     display: -webkit-flex;
     display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 20%;
 }
-*/
-#burgerContainer .navLink {
-    
+@media only screen and (min-width: 786px) {
+    .jumbo {
+        height: 500px;
+    }
+}
+#headline {
+    margin: 0 auto;
+    align-self: center;
+    color: #fff;
+    text-align: center;
+    font-size: 12px;
+}
+@media only screen and (min-width: 786px) {
+    #headline {
+        font-size: 24px;
+    }
 }
