--- a/styles/custom.css
+++ b/styles/custom.css
@@ -37,7 +37,7 @@ nav {
         width: 75%;
     }
 }
-#brand{
+#brand {
     display: -webkit-flex;
     display: flex;
 }
@@ -58,6 +58,13 @@ nav {
     border-radius: 50%;
     padding: 2px;
     color: #fff;
+    -webkit-transition: box-shadow 1s ease;
+    -moz-transition: box-shadow 1s ease;
+    -o-transition: box-shadow 1s ease;
+    transition: box-shadow 1s ease;
+}
+#logo:hover {
+    box-shadow: 0px 0px 20px #ddd;
 }
 @media only screen and (min-width: 768px) {
     #logo {
@@ -76,14 +83,14 @@ nav a {
     display: inline;
 }
 .navLink img {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     margin: 10px;
 }
 @media only screen and (min-width: 768px) {
     .navLink img {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         margin: 10px;
     }
 }
@@ -124,6 +131,9 @@ nav a {
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
+}
+#myProjects {
+    margin-top: 40px;
 }
 @media only screen and (min-width: 1024px) {
     #myProjects {
@@ -172,6 +182,9 @@ nav a {
 .projectText p {
     font-size: 0.8em;
 }
+.projectText a h3:hover {
+    color: rgba(153, 204, 255, 1);
+}
 .skillsContainer {
     display: -webkit-flex;
     display: flex;
@@ -184,8 +197,8 @@ nav a {
     font-size: 0.7em;
     margin: 0 5px;
     padding: 5px;
-    background-color:  rgba(150, 150, 255, 1);
-    color: rgb(255, 255, 255);
+    background-color:  rgba(153, 204, 255, 1);
+    color: rgb(0, 0, 0);
     border-radius: 5px;
 }
 @media only screen and (min-width: 768px) {
