Refactoring CSS into SCSS and using ITCSS principles - NOT COMPLETE

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,124 +1,7 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    /* font-family: 'Oswald', sans-serif; */
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    background: white; /* For browsers that don't support gradient */
-    background: linear-gradient(to top left, #fff, #888);
-    background: -webkit-linear-gradient(bottom right, #fff, #888);  /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(top left, #fff, #888);  /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(top left, #fff, #888);  /* For Firefox 3.6 to 15 */
-}
-nav {
-    display: -webkit-flex;
-    display: flex;
-    height: 75px;
-    width: 100%;
-    position: fixed;
-    background-color: rgba(255, 255, 255, 0);
-}
-@media only screen and (min-width: 768px) {
-    nav {
-        height: 100px;
-    }
-}
-.container {
-    display: flex;
-    width: 100%;
-    padding: 0 20px;
-    margin: auto;
-    height: 100%;
-    align-items: center;
-    color: white;
-}
-@media only screen and (min-width: 1024px) {
-    .container {
-        width: 75%;
-    }
-}
-#brand {
-    display: -webkit-flex;
-    display: flex;
-}
-#tagline {
-    flex-direction: column;
-    padding-left: 10px;
-    font-size: 10px;
-}
-@media only screen and (min-width: 768px) {
-    #tagline {
-        font-size: 12px;
-    }
-}
-#logo {
-    font-family: 'Righteous', cursive;
-    font-size: 20px;
-    border: 5px solid #fff;
-    border-radius: 50%;
-    padding: 2px;
-    color: #fff;
-    -webkit-transition: box-shadow 1s ease;
-    -moz-transition: box-shadow 1s ease;
-    -o-transition: box-shadow 1s ease;
-    transition: box-shadow 1s ease;
-}
-#logo:hover {
-    box-shadow: 0px 0px 20px #ddd;
-}
-@media only screen and (min-width: 768px) {
-    #logo {
-        font-size: 24px;
-    }
-}
-nav a {
-    text-decoration: none;
-}
-#linksContainer {
-    margin-left: auto;
-    margin-right: 0px;
-    color: #fff;
-}
-.navLink {
-    display: inline;
-}
-.navLink img {
-    width: 15px;
-    height: 15px;
-    margin: 10px;
-}
-@media only screen and (min-width: 768px) {
-    .navLink img {
-        width: 30px;
-        height: 30px;
-        margin: 10px;
-    }
-}
-.jumbo {
-    background-image: url("../images/computer_screen2_dark.png");
-    background-size: cover;  
-    background-attachment: fixed;  
-    height: 300px;
-    display: -webkit-flex;
-    display: flex;
-}
-@media only screen and (min-width: 768px) {
-    .jumbo {
-        height: 500px;
-    }
-}
-#headline {
-    margin: 0 auto;
-    align-self: center;
-    color: #fff;
-    text-align: center;
-    font-size: 12px;
-}
-@media only screen and (min-width: 768px) {
-    #headline {
-        font-size: 24px;
-    }
-}
+@import 'globals';
+@import 'nav';
+@import 'jumbo';
+
 #aboutme {
     width: 80%;
     margin: auto;
