--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@ nav {
   width: 100%;
   position: fixed;
   background-color: rgba(255, 255, 255, 0); }
+  nav a {
+    text-decoration: none; }
 
 @media only screen and (min-width: 768px) {
   nav {
@@ -32,7 +34,7 @@ nav {
   margin: auto;
   height: 100%;
   align-items: center;
-  color: white; }
+  color: #fff; }
 
 @media only screen and (min-width: 1024px) {
   .container {
@@ -67,9 +69,6 @@ nav {
 @media only screen and (min-width: 768px) {
   #logo {
     font-size: 24px; } }
-nav a {
-  text-decoration: none; }
-
 #linksContainer {
   margin-left: auto;
   margin-right: 0px;
