Still refactoring code...

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -10,3 +10,14 @@ html, body {
     background: -o-linear-gradient(top left, #fff, #888);  /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(top left, #fff, #888);  /* For Firefox 3.6 to 15 */
 }
+
+h2 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
+a {
+    text-decoration: none;
+}
