--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,15 @@ html, body {
   background: -moz-linear-gradient(top left, #fff, #888);
   /* For Firefox 3.6 to 15 */ }
 
+h2 {
+  text-align: center; }
+
+p {
+  text-align: center; }
+
+a {
+  text-decoration: none; }
+
 nav {
   display: -webkit-flex;
   display: flex;
@@ -21,8 +30,6 @@ nav {
   width: 100%;
   position: fixed;
   background-color: rgba(255, 255, 255, 0); }
-  nav a {
-    text-decoration: none; }
 
 @media only screen and (min-width: 768px) {
   nav {
@@ -102,7 +109,6 @@ nav {
   margin: 0 auto;
   align-self: center;
   color: #fff;
-  text-align: center;
   font-size: 12px; }
 
 @media only screen and (min-width: 768px) {
@@ -122,7 +128,7 @@ nav {
   flex-direction: column; }
 
 #myProjects {
-  margin-top: 40px; }
+  margin: 40px; }
 
 @media only screen and (min-width: 1024px) {
   #myProjects {
@@ -145,12 +151,11 @@ nav {
   width: 100%; }
 
 @media only screen and (min-width: 768px) {
-  .project projectImg img {
+  .project .projectImg img {
     width: 70%;
     margin-left: auto;
     margin-right: auto; } }
 .projectText a {
-  text-decoration: none;
   color: black; }
 
 .projectText a h3 {
@@ -159,26 +164,25 @@ nav {
 @media only screen and (min-width: 768px) {
   .projectText a h3 {
     font-size: 1.2em; } }
-.projectText {
-  text-align: center; }
-
 .projectText p {
   font-size: 0.8em; }
 
 .projectText a h3:hover {
-  color: #99ccff; }
+  color: #4b4b4b; }
 
 .skillsContainer {
   display: -webkit-flex;
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: center; }
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
 
 .skill {
   flex-shrink: 0.8;
   font-size: 0.7em;
-  margin: 0 5px;
+  margin: 5px 5px;
   padding: 5px;
   background-color: #99ccff;
   color: black;
@@ -188,8 +192,5 @@ nav {
   .projectText h3 {
     font-size: 1.25em; }
 
-  .projectText p {
-    font-size: 1em; }
-
-  .skill {
+  .projectText p, .skill {
     font-size: 1em; } }
