--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,8 +16,9 @@
     flex-direction: column;
 }
 #myProjects {
-    margin-top: 40px;
+    margin: 40px;
 }
+
 @media only screen and (min-width: 1024px) {
     #myProjects {
         display: -ms-flex;
@@ -30,7 +31,7 @@
     .project {
         width: 28%;
         padding: 30px 0;
-        margin: 25px;        
+        margin: 25px;
     }
 }
 .projectImg {
@@ -41,14 +42,13 @@
     width: 100%;
 }
 @media only screen and (min-width: 768px) {
-    .project projectImg img {
+    .project .projectImg img {
         width: 70%;
         margin-left: auto;
         margin-right: auto;
     }
 }
 .projectText a {
-    text-decoration: none;
     color: rgba(0, 0, 0, 1);
 }
 .projectText a h3 {
@@ -59,14 +59,11 @@
         font-size: 1.2em;
     }
 }
-.projectText {
-    text-align: center;
-}
 .projectText p {
     font-size: 0.8em;
 }
 .projectText a h3:hover {
-    color: rgba(153, 204, 255, 1);
+    color: rgba(75, 75, 75, 1);
 }
 .skillsContainer {
     display: -webkit-flex;
@@ -74,11 +71,13 @@
     flex-direction: row;
     width: 100%;
     justify-content: center;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 .skill {
     flex-shrink: 0.8;
     font-size: 0.7em;
-    margin: 0 5px;
+    margin: 5px 5px;
     padding: 5px;
     background-color:  rgba(153, 204, 255, 1);
     color: rgb(0, 0, 0);
@@ -88,10 +87,7 @@
     .projectText h3 {
         font-size: 1.25em;
     }
-    .projectText p {
+    .projectText p, .skill {
         font-size: 1em;
-    }
-    .skill {
-        font-size: 1em;
-    }
+    }    
 }
