--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,5 +1,3 @@
-$font-color: #fff;
-
 nav { 
     display: -webkit-flex;
     display: flex;
@@ -20,7 +18,7 @@ nav {
     margin: auto;
     height: 100%;
     align-items: center;
-    color: $font-color;
+    color: $nav-color;
 }
 @media only screen and (min-width: 1024px) {
     .container {
@@ -44,10 +42,10 @@ nav {
 #logo {
     font-family: 'Righteous', cursive;
     font-size: 20px;
-    border: 5px solid $font-color;
+    border: 5px solid $nav-color;
     border-radius: 50%;
     padding: 2px;
-    color: $font-color;
+    color: $nav-color;
     -webkit-transition: box-shadow 1s ease;
     -moz-transition: box-shadow 1s ease;
     -o-transition: box-shadow 1s ease;
@@ -64,7 +62,7 @@ nav {
 #linksContainer {
     margin-left: auto;
     margin-right: 0px;
-    color: $font-color;
+    color: $nav-color;
 }
 .navLink {
     display: inline;
