--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Righteous');
+// @import url('https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre');
 
 $main-font: 'Open Sans', sans-serif;
+// $main-font: 'Frank Ruhl Libre', serif;
+$headings-font: 'Righteous', cursive;
 $font-color: rgba(0,0,0,1);
 $secondary: rgba(153, 204, 255, 1);
 $nav-color: #fff;
