--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -1,12 +1,33 @@
 h2 {
     text-align: center;
     margin-top: 40px;
-    margin-bottom: 0;
+    font-family: $headings-font;
+}
+h3 {
+    color: $font-color;
+    margin: 0;
+    margin-top: .75em;
+    font-family: $headings-font;
 }
 
 p {
     text-align: center;
+    margin-top: .75em;
+    font-size: 0.8em;
+}
+@media only screen and (min-width: 768px) {
+    p {
+        font-size: 1em;
+    }
 }
 a {
     text-decoration: none;
+}
+a h3:hover {
+    color: #fff;
+}
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(153, 204, 255, 0), rgba(153, 204, 255, 0.75), rgba(153, 204, 255, 0));
 }
