--- a/scss/_generic.scss
+++ b/scss/_generic.scss
@@ -3,9 +3,7 @@ html, body {
     padding: 0;
     font-family: $main-font;
     text-align: center;
-    background: white; /* For browsers that don't support gradient */
-    background: linear-gradient(to top left, #fff, #888);
-    background: -webkit-linear-gradient(bottom right, #fff, #888);  /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(top left, #fff, #888);  /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(top left, #fff, #888);  /* For Firefox 3.6 to 15 */
+    @include bg-grad(#444, #fff);
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
 }
