--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -12,6 +12,7 @@ nav {
     }   
 }
 .container {
+    display: -webkit-flex;
     display: flex;
     width: 100%;
     padding: 0 20px;
@@ -46,10 +47,7 @@ nav {
     border-radius: 50%;
     padding: 2px;
     color: $nav-color;
-    -webkit-transition: box-shadow 1s ease;
-    -moz-transition: box-shadow 1s ease;
-    -o-transition: box-shadow 1s ease;
-    transition: box-shadow 1s ease;
+    @include transition(box-shadow 1s ease);
 }
 #logo:hover {
     box-shadow: 0px 0px 20px #ddd;
