--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,143 +2,9 @@
 @import 'tools';
 @import 'generic';
 @import 'elements';
-@import 'nav';
-@import 'jumbo';
-@import 'components';
+@import 'components/about';
+@import 'components/jumbo';
+@import 'components/nav';
+@import 'components/projects';
+@import 'components/skills';
 @import 'trumps';
-
-#aboutme {
-    width: 100%;
-    margin: auto;
-    p {
-        width: 80%;
-        margin: auto;
-    }
-}
-.project {
-    width: 100%;
-    margin: auto;
-    margin-bottom: 35px;
-    padding-top: 25px;
-    display: -webkit-flex;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-}
-.projectImg, .projectText {
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    margin: auto;
-
-    img {
-        width: 80%;
-        margin: auto;
-    }
-
-}
-
-.projectText {
-    flex-direction: column;
-    width: 80%;
-    h2 {
-        color: black;
-    }
-}
-@media only screen and (min-width: 768px) {
-    .project {
-        -ms-flex-direction: row;
-        flex-direction: row;
-    }
-    .projectImg, .projectText {
-    width: 50%;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    }
-}
-.skillsContainer {
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: center;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
-.skill {
-    flex-shrink: 0.8;
-    font-size: 0.7em;
-    margin: 5px 5px;
-    padding: 5px;
-    background-color:  $secondary;
-    color: $font-color;
-    border-radius: 5px;
-    border: 1px solid $secondary;
-}
-@media only screen and (min-width: 768px) {
-    .skill {
-        font-size: 0.85em;
-    }
-}
-/*
-#myProjects {
-    margin: 40px;
-}
-
-@media only screen and (min-width: 1024px) {
-    #myProjects {
-        display: -ms-flex;
-        display: flex;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        margin: auto;
-        justify-content: center;
-    }
-    .project {
-        width: 28%;
-        padding: 30px 0;
-        margin: 25px;
-    }
-}
-.projectImg {
-    margin-left: auto;
-    margin-right: auto;
-}
-.project img {
-    width: 100%;
-}
-@media only screen and (min-width: 768px) {
-    .project .projectImg img {
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-.projectText a {
-    color: $font-color;
-}
-.projectText a h3 {
-    font-size: 1em;
-}
-@media only screen and (min-width: 768px) {
-    .projectText a h3 {
-        font-size: 1.2em;
-    }
-}
-.projectText p {
-    font-size: 0.8em;
-}
-.projectText a h3:hover {
-    color: rgba(75, 75, 75, 1);
-}
-
-@media only screen and (min-width: 768px) {
-    .projectText h3 {
-        font-size: 1.25em;
-    }
-    .projectText p, .skill {
-        font-size: 1em;
-    }    
-}
-*/
