--- a/scss/_generic.scss
+++ b/scss/_generic.scss
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     font-family: $main-font;
     text-align: center;
-    @include bg-grad(#444, #fff);
+    @include bg-grad(#777799, #dedeff);
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
 }
