--- a/scss/components/_skills.scss
+++ b/scss/components/_skills.scss
@@ -5,7 +5,7 @@
     width: 100%;
     justify-content: center;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
 }
 .skill {
     flex-shrink: 0.8;
@@ -15,6 +15,7 @@
     background-color:  $secondary;
     color: $font-color;
     border-radius: 5px;
+    @include box-s(2px 2px 6px black); 
 }
 @media only screen and (min-width: 768px) {
     .skill {
