--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -6,5 +6,6 @@ $main-font: 'Open Sans', sans-serif;
 // $main-font: 'Frank Ruhl Libre', serif;
 $headings-font: 'Righteous', cursive;
 $font-color: rgba(0,0,0,1);
-$secondary: rgba(153, 204, 255, 1);
+// $secondary: rgba(153, 204, 255, 1);
+$secondary: rgba(188, 228, 141, 0.5);
 $nav-color: #fff;
