--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -1,18 +1,14 @@
 h2 {
     text-align: center;
-    margin-top: 40px;
     font-family: $headings-font;
 }
 h3 {
     color: $font-color;
-    margin: 0;
     margin-top: .75em;
     font-family: $headings-font;
 }
-
 p {
     text-align: center;
-    margin-top: .75em;
     font-size: 0.8em;
 }
 @media only screen and (min-width: 768px) {
@@ -24,10 +20,11 @@ a {
     text-decoration: none;
 }
 a:hover, a h3:hover {
-    color: #fff;
+    color: #aaa;
 }
 hr {
     border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(153, 204, 255, 0), rgba(153, 204, 255, 0.75), rgba(153, 204, 255, 0));
+    height: 2px;
+    width: 90%;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
