--- a/scss/_tools.scss
+++ b/scss/_tools.scss
@@ -4,7 +4,6 @@
     -o-transition: $trans-params;
     transition: $trans-params;
 }
-
 @mixin bg-grad($bg-grad-color1, $bg-grad-color2) {
     background: $bg-grad-color1; /* For browsers that don't support gradient */
     background: linear-gradient(to top left, $bg-grad-color1, $bg-grad-color2);
@@ -12,9 +11,10 @@
     background: -o-linear-gradient(top left, $bg-grad-color1, $bg-grad-color2);  /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(top left, $bg-grad-color1, $bg-grad-color2);  /* For Firefox 3.6 to 15 */
 }
-
 @mixin box-s($shadow-params) {
     -webkit-box-shadow: $shadow-params;
     -moz-box-shadow: $shadow-params;
     box-shadow: $shadow-params;
 }
+
+// Add flexbox browser support: https://css-tricks.com/using-flexbox/
