--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -1,7 +1,31 @@
+.my-projects {
+    background-color: #555;
+    padding-top: 15px;
+    color: white;
+    a {
+        border: 3px solid white;
+        margin: 10px 0 0 0;
+        height: 25px;
+        width: 150px;
+        border-radius: 25px;
+        line-height: 25px;
+        font-size: 0.85em;
+        color: white;
+        text-transform: uppercase;
+        @include transition(all 0.25s ease);
+    }
+    a:hover {
+        border: 3px solid black;
+        background-color: $secondary;
+        color: black;
+        width: 175px;
+    }
+}
+
 .project {
     width: 90%;
     margin: auto;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
     padding-top: 25px;
     display: -webkit-flex;
     display: flex;
@@ -11,6 +35,8 @@
 .projectImg, .projectText {
     display: -webkit-flex;
     display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
     align-items: center;
     margin: auto;
 
@@ -23,19 +49,23 @@
 .projectText {
     flex-direction: column;
     width: 80%;
-    h2 {
-        color: black;
+    h3 {
+        color: white;
     }
 }
 @media only screen and (min-width: 768px) {
     .project {
         -ms-flex-direction: row;
         flex-direction: row;
+        width: 70%;
     }
     .projectImg, .projectText {
-    width: 80%;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
+        width: 80%;
+        display: -webkit-flex;
+        display: flex;
+        align-items: center;
+        p {
+            width: 80%;
+        }
     }
 }
