--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ h3 {
 p {
   text-align: center;
   font-size: 0.8em; }
+  p span {
+    font-weight: bold; }
 
 @media only screen and (min-width: 768px) {
   p {
@@ -155,6 +157,7 @@ nav {
     font-size: 0.85em;
     color: white;
     text-transform: uppercase;
+    font-weight: bold;
     -webkit-transition: all 0.25s ease;
     -moz-transition: all 0.25s ease;
     -o-transition: all 0.25s ease;
@@ -163,7 +166,7 @@ nav {
     border: 3px solid black;
     background-color: rgba(188, 228, 141, 0.5);
     color: black;
-    width: 175px; }
+    width: 200px; }
 
 .project {
   width: 90%;
@@ -216,7 +219,9 @@ nav {
 
 .skill {
   flex-shrink: 0.8;
-  font-size: 0.7em;
+  font-size: 0.6em;
+  text-transform: uppercase;
+  font-weight: bold;
   margin: 5px 5px;
   padding: 5px;
   background-color: rgba(188, 228, 141, 0.5);
@@ -228,4 +233,33 @@ nav {
 
 @media only screen and (min-width: 768px) {
   .skill {
-    font-size: 0.85em; } }
+    font-size: 0.7em; } }
+.footer {
+  position: fixed;
+  display: -webkit-flex;
+  display: flex;
+  bottom: 0;
+  padding: 0;
+  z-index: 100;
+  width: 100%;
+  height: 30px;
+  color: #333;
+  background-color: #ccc;
+  font-size: 0.8em; }
+  .footer a {
+    width: 33%;
+    margin-bottom: 0;
+    padding: 5px 0;
+    text-decoration: none;
+    cursor: pointer;
+    -webkit-transition: all 0.25s ease;
+    -moz-transition: all 0.25s ease;
+    -o-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+    text-transform: uppercase;
+    font-weight: bold; }
+  .footer a:link, .footer a:visited {
+    color: #333; }
+  .footer a:hover {
+    background-color: rgba(188, 228, 141, 0.5);
+    color: white; }
