--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -12,13 +12,14 @@
         font-size: 0.85em;
         color: white;
         text-transform: uppercase;
+        font-weight: bold;
         @include transition(all 0.25s ease);
     }
     a:hover {
         border: 3px solid black;
         background-color: $secondary;
         color: black;
-        width: 175px;
+        width: 200px;
     }
 }
 
