--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,4 +7,5 @@
 @import 'components/nav';
 @import 'components/projects';
 @import 'components/skills';
+@import 'components/footer';
 @import 'trumps';
