--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -1,6 +1,7 @@
 .my-projects {
     background-color: #555;
     padding-top: 15px;
+    padding-bottom: 15px;
     color: white;
     a {
         border: 3px solid white;
