--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,5 +7,6 @@
 @import 'components/nav';
 @import 'components/projects';
 @import 'components/skills';
+@import 'components/contact';
 @import 'components/footer';
 @import 'trumps';
