--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,13 @@ nav {
   .skill {
     font-size: 0.7em; } }
 .contact {
+  background-color: rgba(188, 228, 141, 0.5);
+  padding-top: 20px; }
+
+form {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8em;
   display: -webkit-flex;
   display: flex;
   -ms-flex-direction: column;
@@ -248,17 +255,29 @@ nav {
   height: 300px;
   padding-top: 20px;
   padding-left: 10%; }
-  .contact input[type=text], .contact textarea {
+  form input[type=text], form input[type=email], form textarea {
     width: 80%;
     border-radius: 10px;
     padding-left: 5px;
     margin-bottom: 10px;
     font-family: "Open Sans", sans-serif; }
-  .contact textarea {
+  form textarea {
     height: 50px; }
-  .contact input[type=submit] {
-    border-radius: 10px; }
+  form input[type=submit] {
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: bold; }
 
+@media only screen and (min-width: 768px) {
+  form {
+    -ms-flex-direction: row;
+    flex-direction: row;
+    justify-content: center;
+    height: 230px; }
+    form div {
+      width: 50%; }
+    form textarea {
+      height: 100px; } }
 .footer {
   position: fixed;
   display: -webkit-flex;
