--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -1,4 +1,11 @@
 .contact {
+    background-color: $secondary;
+    padding-top: 20px;
+}
+form {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 0.8em;
     display: -webkit-flex;
     display: flex;
     -ms-flex-direction: column;
@@ -7,7 +14,7 @@
     height: 300px;
     padding-top: 20px;
     padding-left: 10%;    
-    input[type=text], textarea {
+    input[type=text], input[type=email], textarea {
         width: 80%;
         border-radius: 10px;
         padding-left: 5px;
@@ -19,5 +26,22 @@
     }
     input[type=submit] {
         border-radius: 10px;
+        text-transform: uppercase;
+        font-weight: bold;
     }
+}
+@media only screen and (min-width: 768px) {
+    form {
+        -ms-flex-direction: row;
+        flex-direction: row;
+        justify-content: center;
+        height: 230px;
+        div {
+            width: 50%;
+        }
+        textarea {
+            height: 100px;
+        }
+    }
+    
 }
