--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -1,6 +1,7 @@
 .contact {
     background-color: $secondary;
     padding-top: 20px;
+    padding-bottom: 40px;
 }
 form {
     text-transform: uppercase;
