Added movieFinder to projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,8 @@ p {
   p {
     font-size: 1em; } }
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: rgba(188, 228, 141, 0.5); }
 
 a:hover, a h3:hover {
   color: #aaa; }
@@ -47,6 +48,10 @@ hr {
   .aboutme p {
     width: 70%;
     margin: auto; }
+  .aboutme a {
+    color: black; }
+  .aboutme a:hover {
+    color: #aaa; }
 
 @media only screen and (min-width: 1024px) {
   #aboutme p {
@@ -152,7 +157,7 @@ nav {
   padding-top: 15px;
   padding-bottom: 15px;
   color: white; }
-  .my-projects a {
+  .my-projects .projLink {
     border: 3px solid white;
     margin: 10px 0 0 0;
     height: 25px;
@@ -167,7 +172,7 @@ nav {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease; }
-  .my-projects a:hover {
+  .my-projects .projLink:hover {
     border: 3px solid black;
     background-color: rgba(188, 228, 141, 0.5);
     color: black;
