--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -8,6 +8,12 @@
         width: 70%;
         margin: auto;
     }
+    a {
+        color: $font-color;
+    }
+    a:hover {
+        color: #aaa;
+    }
 }
 @media only screen and (min-width: 1024px) {
     #aboutme p {
