--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ hr {
   border: 0;
   height: 2px;
   width: 90%;
-  background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.75), transparent); }
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); }
 
 .aboutme {
   width: 100%;
